--- a/e_regex_2/index.html
+++ b/e_regex_2/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="index.js"></script>
-    <title>find message with regex 2</title>
+    <title>find message with regex (bis)</title>
 </head>
 
 <body>
