--- a/i_popup/index.html
+++ b/i_popup/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>popup</title>
+    <title>Popup</title>
 </head>
 <body>
     <div id="main_container">
