--- a/q_caroussel/index.html
+++ b/q_caroussel/index.html
@@ -26,28 +26,30 @@
         <img class="logo" src= "img/audacity_logo.png" alt="audacity" width="100px">
         <img class="logo" src= "img/openstreetmap_logo.png" alt="openstreetmap" width="100px">
         <img class="logo" src= "img/framasoft_logo.png" alt="framasoft" width="100px">
+        <img class="logo" src= "img/freesound_logo.svg" alt="freesound" width="100px">
         <button class="button_prev" onclick="next(-1)" onmousedown="mouse_down(-1)" onmouseup="mouse_up()">
             <
         </button>
         <button class="button_next" onclick="next(1)" onmousedown="mouse_down(1)" onmouseup="mouse_up()">
             >
         </button>
-        <button id="bash" class="puce puce-active" onclick="show(0)"></button>
-        <button id="linux" class="puce" onclick="show(1)"></button>
-        <button id="react" class="puce" onclick="show(2)"></button>
-        <button id="python" class="puce" onclick="show(3)"></button>
-        <button id="p5" class="puce" onclick="show(4)"></button>
-        <button id="godot" class="puce" onclick="show(5)"></button>
-        <button id="git" class="puce" onclick="show(6)"></button>
-        <button id="krita" class="puce" onclick="show(7)"></button>
-        <button id="inkscape" class="puce" onclick="show(8)"></button>
-        <button id="vlc" class="puce" onclick="show(9)"></button>
-        <button id="mongodb" class="puce" onclick="show(10)"></button>
-        <button id="nodejs" class="puce" onclick="show(11)"></button>
-        <button id="blender" class="puce" onclick="show(12)"></button>
-        <button id="audacity" class="puce" onclick="show(13)"></button>
-        <button id="openstreetmap" class="puce" onclick="show(14)"></button>
-        <button id="framasoft" class="puce" onclick="show(15)"></button>
+        <button class="puce puce-active" onclick="show(0)" data-toggle="tooltip" data-placement="left" title="Bash"></button>
+        <button class="puce" onclick="show(1)" data-toggle="tooltip" data-placement="left" title="Linux"></button>
+        <button class="puce" onclick="show(2)" data-toggle="tooltip" data-placement="left" title="React"></button>
+        <button class="puce" onclick="show(3)" data-toggle="tooltip" data-placement="left" title="Python"></button>
+        <button class="puce" onclick="show(4)" data-toggle="tooltip" data-placement="left" title="P5"></button>
+        <button class="puce" onclick="show(5)" data-toggle="tooltip" data-placement="left" title="Godot"></button>
+        <button class="puce" onclick="show(6)" data-toggle="tooltip" data-placement="left" title="Git"></button>
+        <button class="puce" onclick="show(7)" data-toggle="tooltip" data-placement="left" title="Krita"></button>
+        <button class="puce" onclick="show(8)" data-toggle="tooltip" data-placement="left" title="Inkscape"></button>
+        <button class="puce" onclick="show(9)" data-toggle="tooltip" data-placement="left" title="VLC"></button>
+        <button class="puce" onclick="show(10)" data-toggle="tooltip" data-placement="left" title="MongoDB"></button>
+        <button class="puce" onclick="show(11)" data-toggle="tooltip" data-placement="left" title="NodeJS"></button>
+        <button class="puce" onclick="show(12)" data-toggle="tooltip" data-placement="left" title="Blender"></button>
+        <button class="puce" onclick="show(13)" data-toggle="tooltip" data-placement="left" title="Audacity"></button>
+        <button class="puce" onclick="show(14)" data-toggle="tooltip" data-placement="left" title="OpenStreetMap"></button>
+        <button class="puce" onclick="show(15)" data-toggle="tooltip" data-placement="left" title="Framasoft"></button>
+        <button class="puce" onclick="show(16)" data-toggle="tooltip" data-placement="left" title="Freesound"></button>
     </div>
 </body>
 </html>
