--- a/q_caroussel/index.html
+++ b/q_caroussel/index.html
@@ -27,6 +27,7 @@
         <img class="logo" src= "img/openstreetmap_logo.png" alt="openstreetmap" width="100px">
         <img class="logo" src= "img/framasoft_logo.png" alt="framasoft" width="100px">
         <img class="logo" src= "img/freesound_logo.svg" alt="freesound" width="100px">
+        <img class="logo" src= "img/lmms_logo.svg" alt="lmms" width="100px">
         <button class="button_prev" onclick="next(-1)" onmousedown="mouse_down(-1)" onmouseup="mouse_up()">
             <
         </button>
@@ -50,6 +51,7 @@
         <button class="puce" onclick="show(14)" data-toggle="tooltip" data-placement="left" title="OpenStreetMap"></button>
         <button class="puce" onclick="show(15)" data-toggle="tooltip" data-placement="left" title="Framasoft"></button>
         <button class="puce" onclick="show(16)" data-toggle="tooltip" data-placement="left" title="Freesound"></button>
+        <button class="puce" onclick="show(17)" data-toggle="tooltip" data-placement="left" title="LMMS"></button>
     </div>
 </body>
 </html>
