--- a/u_todo/index.html
+++ b/u_todo/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h3>My todo list</h3>
         <form>
             <input type="text">
             <button>Ajouter</button>
