--- a/ac_distance/index.html
+++ b/ac_distance/index.html
@@ -8,9 +8,7 @@
         <title>Distance</title>
     </head>
     <body>
-        <form name='frout'>
-            <input name='toto'>
-            <p>Distance</p>
-        </form>
+        <h3>Distance</h3>
+        <p>Une fonction pour calculer la distance entre la valeur la plus grande et la valeur la plus petite à partir d'une suite de nombre.</p>
     </body>
 </html>
