set buttons in english

--- a/21_todo/index.html
+++ b/21_todo/index.html
@@ -12,14 +12,11 @@
         <h3>My todo list</h3>
         <form>
             <input type="text">
-            <button>Ajouter</button>
+            <button>Add</button>
         </form>
         <ul>
             <li>
                 <span class="todo done"></span>
-                <p>Text</p>
-                <button>Editer</button>
-                <button>Supprimer</button>
             </li>
         </ul>
     </div>
