add number on needle

--- a/39_clock/index.html
+++ b/39_clock/index.html
@@ -9,14 +9,12 @@
         <title>Clock</title>
     </head>
     <body>
-        <!-- <div class="container"> -->
-            <div class='clock'>
-                <div class='sec needle'></div>
-                <div class='min needle'></div>
-                <div class='hour needle'></div>
-                <div class="circle"></div>
-                <div class="dots"></div>
-            </div>
-        <!-- </div> -->
+        <div class='clock'>
+            <div id='sec' class='needle'></div>
+            <div id='min' class='needle'></div>
+            <div id='hour' class='needle'></div>
+            <div class="circle"></div>
+            <div class="dots"></div>
+        </div>
     </body>
 </html>
