delete useless button

--- a/37_proto_myre/index.html
+++ b/37_proto_myre/index.html
@@ -8,11 +8,10 @@
     </head>
     <body>
         <h3>Home</h3>
-        <button>Connexion</button>
         <form>
             <input name='name_input' type="text" placeholder="your name" autofocus>
             <input name='pwd_input' type="password" placeholder="your password">
-            <button type="submit">Validate</button>
+            <button id="submit" type="submit">Connection</button>
         </form>
         <p id='error'></p>
     </body>
