--- a/37_proto_myre/profil.html
+++ b/37_proto_myre/profil.html
@@ -3,7 +3,7 @@
     <body>
         <h3>Profil</h3>
         <p></p>
-        <a href="./index.html">Login</a>
+        <a href="./index.html">Home</a>
     </body>
     <script src='./data.js'></script>
     <script>
