add button to change speed of arms

--- a/41_pendule/index.html
+++ b/41_pendule/index.html
@@ -9,7 +9,8 @@
         <title>Pendulum</title>
     </head>
     <body>
-        <p>Pendulum</p>
+        <!-- <button id="speed_arm_1">speed arm 1 = 1</button>
+        <button id="speed_arm_2">speed arm 2 = 1</button> -->
         <div id="container">
             <div id="joint_1">
                 <div id="arm_1">
