--- a/41_pendule/index.html
+++ b/41_pendule/index.html
@@ -16,7 +16,11 @@
                 <div id="arm_1">
                     <div id="joint_2">
                         <div id="arm_2">
-                            <div id="pen"></div>
+                            <div id="joint_3">
+                                <div id="arm_3">
+                                    <div id="pen"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
