make disappear arms after finish display dots

--- a/41_pendule/index.html
+++ b/41_pendule/index.html
@@ -12,12 +12,12 @@
         <!-- <button id="speed_arm_1">speed arm 1 = 1</button>
         <button id="speed_arm_2">speed arm 2 = 1</button> -->
         <div id="container">
-            <div id="joint_1">
-                <div id="arm_1">
-                    <div id="joint_2">
-                        <div id="arm_2">
-                            <div id="joint_3">
-                                <div id="arm_3">
+            <div class="joint">
+                <div class="arm">
+                    <div class="joint">
+                        <div class="arm">
+                            <div class="joint">
+                                <div class="arm">
                                     <div id="pen"></div>
                                 </div>
                             </div>
