rename oeuf into egg

--- a/42_pendulum_2/index.html
+++ b/42_pendulum_2/index.html
@@ -21,9 +21,9 @@
             <button onclick={change_shape("teardrop_3")}>teardrop_3</button>
             <button onclick={change_shape("teardrop_4")}>teardrop_4</button>
             <button onclick={change_shape("circle")}>circle</button>
-            <button onclick={change_shape("oeuf")}>oeuf</button>
-            <button onclick={change_shape("oeuf_grid")}>oeuf_grid</button>
-            <button onclick={change_shape("oeuf_fiber")}>oeuf_fiber</button>
+            <button onclick={change_shape("egg")}>egg</button>
+            <button onclick={change_shape("egg_grid")}>egg_grid</button>
+            <button onclick={change_shape("egg_fiber")}>egg_fiber</button>
             <button onclick={change_shape("straight_line")}>straight_line</button>
             <button onclick={change_shape("tetar")}>tetar</button>
             <button onclick={change_shape("stockings")}>stockings</button>
