--- a/07_calculatrice/index.html
+++ b/07_calculatrice/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="index.js" defer></script>
     <title>Calculatrice</title>
 </head>
@@ -15,8 +16,11 @@
         <input id="input_2">
         <button onclick="add()">+</button>
         <button onclick="substract()">-</button>
+        <button onclick="multiply()">*</button>
+        <button onclick="divide()">/</button>
+        <button onclick="reset()">reset</button>
+        <p id="result"></p>
     </div>
-    <p id="result">...</p>
 
 </body>
 
