random_number started at 0 when page refreshed

--- a/10_guess_number/index.html
+++ b/10_guess_number/index.html
@@ -17,7 +17,7 @@
             <input id="guess_number">
             <button onclick="guess()">Guess</button>
             <button onclick="reset()">Reset</button>
-            <p id="message">...</p>
+            <p id="message"></p>
             <p id="essai">nombre d'essai :</p>
 
         </div>
