--- a/42_pendulum_2/index.html
+++ b/42_pendulum_2/index.html
@@ -15,20 +15,20 @@
         <canvas id="arm_canvas"></canvas>
         <canvas id="draw_canvas"></canvas>
         <div class="my_buttons">
-            <button onclick={change_shape("cross_node")}>cross_node</button>
-            <button onclick={change_shape("teardrop")}>teardrop</button>
-            <button onclick={change_shape("teardrop_2")}>teardrop_2</button>
-            <button onclick={change_shape("teardrop_3")}>teardrop_3</button>
-            <button onclick={change_shape("teardrop_4")}>teardrop_4</button>
-            <button onclick={change_shape("circle")}>circle</button>
-            <button onclick={change_shape("egg")}>egg</button>
-            <button onclick={change_shape("egg_grid")}>egg_grid</button>
-            <button onclick={change_shape("egg_fiber")}>egg_fiber</button>
-            <button onclick={change_shape("straight_line")}>straight_line</button>
-            <button onclick={change_shape("tetar")}>tetar</button>
-            <button onclick={change_shape("stockings")}>stockings</button>
-            <button onclick={change_shape("boomrang")}>boomrang</button>
-            <button onclick={change_shape("oval_shape")}>oval_shape</button>
+            <button onclick="change_shape('cross_node')">cross_node</button>
+            <button onclick="change_shape('teardrop')">teardrop</button>
+            <button onclick="change_shape('teardrop_2')">teardrop_2</button>
+            <button onclick="change_shape('teardrop_3')">teardrop_3</button>
+            <button onclick="change_shape('teardrop_4')">teardrop_4</button>
+            <button onclick="change_shape('circle')">circle</button>
+            <button onclick="change_shape('egg')">egg</button>
+            <button onclick="change_shape('egg_grid')">egg_grid</button>
+            <button onclick="change_shape('egg_fiber')">egg_fiber</button>
+            <button onclick="change_shape('straight_line')">straight_line</button>
+            <button onclick="change_shape('tetar')">tetar</button>
+            <button onclick="change_shape('stockings')">stockings</button>
+            <button onclick="change_shape('boomrang')">boomrang</button>
+            <button onclick="change_shape('oval_shape')">oval_shape</button>
         </div>
     </body>
 </html>
