--- a/43_simon/index.html
+++ b/43_simon/index.html
@@ -11,15 +11,10 @@
     <body>
         <div id="container">
             <div id="btns_container">
-                <div>
-                    <div class="my_btns" onmousedown="get_value(0)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
-                </div>
-                <div>
-                    <div class="my_btns" onmousedown="get_value(1)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
-                </div>
-                <div>
-                    <div class="my_btns" onmousedown="get_value(2)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
-                </div>
+                <div class="one my_btns" onmousedown="get_value(0)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
+                <div class="two my_btns" onmousedown="get_value(1)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
+                <div class="three my_btns" onmousedown="get_value(2)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
+                <div class="four my_btns" onmousedown="get_value(3)" onmouseup="reset_color()" onmouseleave="reset_color()"></div>
             </div>
             <div id="signals"></div>
             <button onclick="reset_complete()">RESET</button>
