--- a/32_card_game/index.html
+++ b/32_card_game/index.html
@@ -4,10 +4,73 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <script src="index.js"></script>
         <title>Card Game</title>
     </head>
     <body>
         <p>Card Game</p>
+        <p>&#x1F0A0</p>
+        <p>&#x1F0A1</p>
+        <p>&#x1F0A2</p>
+        <p>&#x1F0A3</p>
+        <p>&#x1F0A4</p>
+        <p>&#x1F0A5</p>
+        <p>&#x1F0A6</p>
+        <p>&#x1F0A7</p>
+        <p>&#x1F0A8</p>
+        <p>&#x1F0A9</p>
+        <p>&#x1F0AA</p>
+        <p>&#x1F0AB</p>
+        <p>&#x1F0AC</p>
+        <p>&#x1F0AD</p>
+        <p>&#x1F0AE</p>
+        <p>&#x1F0B1</p>
+        <p>&#x1F0B2</p>
+        <p>&#x1F0B3</p>
+        <p>&#x1F0B4</p>
+        <p>&#x1F0B5</p>
+        <p>&#x1F0B6</p>
+        <p>&#x1F0B7</p>
+        <p>&#x1F0B8</p>
+        <p>&#x1F0B9</p>
+        <p>&#x1F0BA</p>
+        <p>&#x1F0BB</p>
+        <p>&#x1F0BC</p>
+        <p>&#x1F0BD</p>
+        <p>&#x1F0BE</p>
+        <p>&#x1F0C1</p>
+        <p>&#x1F0C2</p>
+        <p>&#x1F0C3</p>
+        <p>&#x1F0C4</p>
+        <p>&#x1F0C5</p>
+        <p>&#x1F0C6</p>
+        <p>&#x1F0C7</p>
+        <p>&#x1F0C8</p>
+        <p>&#x1F0C9</p>
+        <p>&#x1F0CA</p>
+        <p>&#x1F0CB</p>
+        <p>&#x1F0CC</p>
+        <p>&#x1F0CD</p>
+        <p>&#x1F0CE</p>
+        <p>&#x1F0D1</p>
+        <p>&#x1F0D2</p>
+        <p>&#x1F0D3</p>
+        <p>&#x1F0D4</p>
+        <p>&#x1F0D5</p>
+        <p>&#x1F0D6</p>
+        <p>&#x1F0D7</p>
+        <p>&#x1F0D8</p>
+        <p>&#x1F0D9</p>
+        <p>&#x1F0DA</p>
+        <p>&#x1F0DB</p>
+        <p>&#x1F0DC</p>
+        <p>&#x1F0DD</p>
+        <p>&#x1F0DE</p>
+        <p>&#x1F0DF</p>
+        <p>&#x1F0CF</p>
     </body>
 </html>
+
+<!-- COMMANDE POUR RÉCUPÉRER TOUS LES NOMBRES UNICODE PRÉSENT DANS LA PAGE HTML
+curl https://www.alt-codes.net/playing-cards-symbols.php | grep -o "&#"...... > unicode_number.txt -->
